# wifiqr-gtk

./: .editorconfig  Cargo.toml  build.rs
data/: com.ericktucto.wifiqr.gschema.xml
src/: commands.rs  helpers.rs  main.rs
src/components/: gtkimage.rs  mod.rs  password.rs  row.rs  window.rs
src/ui/: app.ui  image.ui  password.cmb  password.cmb.db  password.ui  resources.gresource.xml  row.ui  style.css
src/wifi/: connman.rs  mod.rs  network_manager.rs
src/window/: imp.rs  mod.rs
