[package]
name = "wifiqr"
version = "0.1.0"
edition = "2021"

[dependencies]
libadwaita = "0.2.1"
gtk4 = "0.5.5"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "glib" }
regex = "1.7.1"
qrcode = "0.12.0"
image = "0.23.0"
futures = "0.3.26"
gio = "0.16.7"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
