[package]
name = "wifiqr"
version = "0.1.2"
edition = "2021"

[dependencies]
gtk4 = "0.5.5"
regex = "1.7.1"
qrcode = "0.12.0"
image = "0.23.0"
futures = "0.3.26"
gio = "0.16.7"
once_cell = "1.17.1"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
glib-build-tools = "0.17.0"
